hphp/hack/test/typecheck/functional_anon_fun.php.exp
File "functional_anon_fun.php", line 21, characters 12-13:
Was expecting an object but type is unknown (Typing[4297])
File "functional_anon_fun.php", line 20, characters 17-18:
It is unknown because a type could not be determined here
